<resources>
    <string name="app_name">PC Workshop</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_login">Enter login</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="welcome_to_pc_workshop">Welcome to PC Workshop!</string>
    <string name="login_with_google">Login with Google</string>
    <string name="register">Register</string>
    <string name="don_t_have_a_account">Don’t have a account?</string>
    <string name="let_s_get_started">Let’s Get Started</string>
    <string name="create_an_new_account">Create an new account</string>
    <string name="full_name">Full name</string>
    <string name="your_email">Your Email</string>
    <string name="password_again">Password again</string>
    <string name="have_a_account">Have a account?</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="control_panel">Панель управления</string>
    <string name="clients">Клиенты</string>
    <string name="orders">Заказы</string>
    <string name="pc">Компьютеры</string>
    <string name="employees">Работники</string>
    <string name="management">Управление</string>
    <string name="accessories">Комплектующие</string>
    <string name="positions">Должности</string>
    <string name="types_of_accessories">Типы комлпектующих</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_address">Адрес доставки:</string>
    <string name="password">Пароль</string>
    <string name="number">Номер телефона</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="email">Email</string>
</resources>