<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClients"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/clients"
        android:textSize="22sp"
        android:textAllCaps="true"
        app:cornerRadius="20dp"
        app:strokeWidth="0dp"
        android:focusable="true"
        android:backgroundTint="#C2D8FF"
        android:textColor="@color/black"
        app:icon="@drawable/ic_clients"
        app:iconPadding="-28dp"
        app:iconTint="@color/black"
        app:iconSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOrders"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/orders"
        android:textSize="22sp"
        android:textAllCaps="true"
        app:cornerRadius="20dp"
        app:strokeWidth="0dp"
        android:backgroundTint="#C2D8FF"
        android:textColor="@color/black"
        app:icon="@drawable/ic_orders"
        app:iconPadding="-28dp"
        app:iconTint="@color/black"
        app:iconSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnClients" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPc"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/pc"
        android:textSize="22sp"
        android:textAllCaps="true"
        app:cornerRadius="20dp"
        app:strokeWidth="0dp"
        android:backgroundTint="#C2D8FF"
        android:textColor="@color/black"
        app:icon="@drawable/ic_pc"
        app:iconPadding="-28dp"
        app:iconTint="@color/black"
        app:iconSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOrders" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEmployees"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/employees"
        android:textSize="22sp"
        android:textAllCaps="true"
        app:cornerRadius="20dp"
        app:strokeWidth="0dp"
        android:backgroundTint="#C2D8FF"
        android:textColor="@color/black"
        app:icon="@drawable/ic_employees"
        app:iconPadding="-28dp"
        app:iconTint="@color/black"
        app:iconSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAccessories"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/accessories"
        android:textSize="22sp"
        android:textAllCaps="true"
        app:cornerRadius="20dp"
        app:strokeWidth="0dp"
        android:backgroundTint="#C2D8FF"
        android:textColor="@color/black"
        app:icon="@drawable/accessories"
        app:iconPadding="-28dp"
        app:iconTint="@color/black"
        app:iconSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEmployees" />

</androidx.constraintlayout.widget.ConstraintLayout>