<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/tvGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/let_s_get_started"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/create_an_new_account"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGetStarted" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_gravity="center"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        android:background="@color/white"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_person"
            android:layout_marginTop="-38dp"
            android:layout_marginStart="8dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingStart="38dp"
            android:background="@drawable/border">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NameLayout"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_gravity="center"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        android:background="@color/white"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_person"
            android:layout_marginTop="-38dp"
            android:layout_marginStart="8dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLastName"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:hint="@string/surname"
            android:inputType="text"
            android:paddingStart="38dp"
            android:background="@drawable/border">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailLayout"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameLayout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_gravity="center"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        android:background="@color/white"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_email"
            android:layout_marginTop="-38dp"
            android:layout_marginStart="8dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingStart="38dp"
            android:background="@drawable/border">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NumberLayout"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailLayout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_gravity="center"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        android:background="@color/white"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_phone"
            android:layout_marginTop="-38dp"
            android:layout_marginStart="8dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:hint="@string/number"
            android:inputType="text"
            android:paddingStart="38dp"
            android:background="@drawable/border">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addingClientsPasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumberLayout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_gravity="center"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        android:background="@color/white"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_locker"
            android:layout_marginTop="-38dp"
            android:layout_marginStart="8dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:inputType="text"
            android:paddingStart="38dp"
            android:background="@drawable/border">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSingIn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:text="Зарегистироваться"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_light"
        app:layout_constraintEnd_toEndOf="@+id/addingClientsPasswordLayout"
        app:layout_constraintStart_toStartOf="@+id/addingClientsPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/addingClientsPasswordLayout" />

    <TextView
        android:visibility="gone"
        android:id="@+id/tvHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/have_a_account"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvSignUp"
        app:layout_constraintStart_toStartOf="@+id/btnSingIn"
        app:layout_constraintTop_toBottomOf="@+id/btnSingIn" />

    <TextView
        android:visibility="gone"
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/sign_up"
        android:textColor="#40BFFF"
        android:textFontWeight="1000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvHave"
        app:layout_constraintStart_toEndOf="@+id/tvHave"
        android:layout_marginLeft="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>