<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.clients.ClientsAddingFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addingClientsNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_gravity="center"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        android:background="@color/white"
        android:layout_marginTop="100dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_person"
            android:layout_marginTop="-38dp"
            android:layout_marginStart="8dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddingClientsName"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingStart="38dp"
            android:background="@drawable/border">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addingClientsLastNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addingClientsNameLayout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_gravity="center"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        android:background="@color/white"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_person"
            android:layout_marginTop="-38dp"
            android:layout_marginStart="8dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddingClientsLastName"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:hint="@string/surname"
            android:inputType="text"
            android:paddingStart="38dp"
            android:background="@drawable/border">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addingClientsEmailLayout"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addingClientsLastNameLayout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_gravity="center"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        android:background="@color/white"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_email"
            android:layout_marginTop="-38dp"
            android:layout_marginStart="8dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddingClientsEmail"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingStart="38dp"
            android:background="@drawable/border">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addingClientsNumberLayout"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addingClientsEmailLayout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_gravity="center"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        android:background="@color/white"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_phone"
            android:layout_marginTop="-38dp"
            android:layout_marginStart="8dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddingClientsPhone"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:hint="@string/number"
            android:inputType="text"
            android:paddingStart="38dp"
            android:background="@drawable/border">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addingClientsPasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addingClientsNumberLayout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_gravity="center"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        android:background="@color/white"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_locker"
            android:layout_marginTop="-38dp"
            android:layout_marginStart="8dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddingClientsPassword"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:inputType="text"
            android:paddingStart="38dp"
            android:background="@drawable/border">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddClient"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/poppins_light"
        android:text="Добавить Клиента"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/addingClientsEmailLayout"
        app:layout_constraintStart_toStartOf="@+id/addingClientsEmailLayout"
        app:layout_constraintTop_toBottomOf="@+id/addingClientsPasswordLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>